// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pretty html 1`] = `
Object {
  "Constructor": "Dummy",
  "Options": Object {
    "ID": "component",
    "label": "Link label",
    "url": "127.0.0.1",
  },
  "html": "
<ul>
  <li>
    <a href=\\"127.0.0.1\\">Link label</a>
  </li>
</ul>
",
}
`;

exports[`pretty html 2`] = `
Object {
  "Constructor": "Dummy",
  "Options": Object {
    "ID": "component",
    "label": "Link label",
    "url": "127.0.0.1",
  },
  "html": "
<ul>
  <li>
    <a href=\\"127.0.0.1\\">Link label</a>
  </li>
</ul>
",
}
`;

exports[`single file component 1`] = `
Object {
  "Constructor": "Panel",
  "Options": Object {
    "ID": "component",
    "content": "Default content",
    "title": "Default title",
  },
  "html": "
<div>Default title</div>
<div>Default content</div>
",
}
`;

exports[`single file component 2`] = `
Object {
  "Constructor": "Panel",
  "Options": Object {
    "ID": "component",
    "content": "Custom content",
    "title": "Custom title",
  },
  "html": "
<div>Custom title</div>
<div>Custom content</div>
",
}
`;

exports[`snapshot correctly 1`] = `
Object {
  "Constructor": "Link",
  "Options": Object {
    "ID": "component",
    "label": "Link label",
    "url": "127.0.0.1",
  },
  "html": "<a href=\\"127.0.0.1\\">Link label</a>",
}
`;

exports[`snapshot correctly 2`] = `
Object {
  "Constructor": "Link",
  "Options": Object {
    "ID": "component",
    "label": "Link label",
    "url": "127.0.0.1",
  },
  "html": "<a href=\\"127.0.0.1\\">Link label</a>",
}
`;

exports[`snapshot correctly 3`] = `
Object {
  "Constructor": "Link",
  "Options": Object {
    "ID": "component",
    "label": "Updated link label",
    "url": "127.0.0.1",
  },
  "html": "<a href=\\"127.0.0.1\\">Updated link label</a>",
}
`;
